sort.baseball.InsertBaseball.scala.error
Compilation error:
InsertBaseball:34: error: value !!= is not a member of Int
  while (trouveTrou()!!=1){
                     ^